2004-09-29 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * CLEANUP_ROUND for gdcmPixelConvert:
    - src/gdcmFile.cxx, gdcmFile.h, gdcmHeader.cxx, gdcmHeader.h clean up
    - src/gdcmPixelStuff[h|cxx] removed
    - src/gdcmPixelConvert[h|cxx] added. Preparatory work included.
    - src/CMakeLists.txt changed accordingly
  * GDCMHOME clean up:
    - MANIFEST.in, WrapSwig.py, WrapVTK.py, distutilsWrapping.py and
      gdcmVersion.py moved to newly created ATTIC related
      gdcmPython/SetupOldies/ directory.
  * Autotools clean up:
    - */*/Makefile.am removed AT EXCEPTION of gdcmPython/Makefile.am
    - autogen.sh configure.in acinclude.m4 python.m4 removed 

2004-09-27 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * src/*.cxx *.h Reference to License.htm fixed to License.html.
  * Doc/CMakeLists.txt, doxygen.config.in: fix.
  * Doc/Website/ConformanceSummary.html, minimal conformance statement added.

2004-09-24 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * TODO updated with Mathieu suggestions. I proposed a template for
    describing TODO entries and used it for new entries.
  * Added Doc/Website/CodingStyle.html, Developpers.html,
    DeveloppersPython.html, GdcmDataCvs.html and
    DownloadVersion0_1.html, DownloadVersion0_3.html.
  * Some Doc/*.txt Doxygen files (which do not really concern the
    documentation itself, but the website) moved to html and
    placed in directory Doc/Website:
    - Doc/DoxyDevelInstal.txt moved to Doc/Website/Developpers.html
    - Doc/DoxyInstallation.txt moved to Doc/Website/Installation.html
    - Doc/DoxyIntroduction.txt included in Doc/Website/Main.html
  * Doc/DoxyfileDeveloppers, DoxyfileUsers, Makefile.am oldies removed.
  * CMakeLists.txt changed accordingly.
  * DEVELOPPER spread out in Doc/Website/Developpers.html, CodingStyle.html,
    DeveloppersPython.html
  * INSTALL nows refers to Doc/Website/Installation.html

2004-09-23 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>